--- a/test/index.html
+++ b/test/index.html
@@ -54,7 +54,7 @@
         </style>
     </head>
     <body>
-        <input id="tag_test" />
+        <input id="tag_test" value="test, test2"/>
         <script>
             tagger = new JSTagger("tag_test");
         </script>
